<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_top"

        android:orientation="horizontal">

        <TextView

            android:id="@+id/textView2"
            android:layout_width="0dp"


            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/Entry_Date"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView

            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/Payment_Mode"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_weight="0.7"
            android:ellipsize="end"
            android:gravity="center"

            android:maxLines="2"
            android:text="@string/Amount"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/Renewal_Date"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />


    </LinearLayout>
</LinearLayout>
