<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_splash"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@mipmap/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/round_corner_blue_bg"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <EditText
            android:id="@+id/eTextMemberId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_user"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:hint="@string/memberId"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:paddingRight="@dimen/dp_15"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/eTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_pass"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="@dimen/dp_15"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/forgot_pass"
            android:textColor="@color/txt_selector"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/button_style_login_signup"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/border_green"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/Skip"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>