<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eTextOldPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:textSize="@dimen/sp_16" />


        <EditText
            android:id="@+id/eTextNewPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/eTextConfNewPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/confirm_new_pass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:textSize="@dimen/sp_16" />


        <Button
            android:id="@+id/btnChangePass"
            style="@style/button_style_login_signup"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_btn_bg"
            android:text="@string/update_pass" />

    </LinearLayout>
</LinearLayout>