<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_splash"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@mipmap/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/round_corner_blue_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/Non_Member"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22" />


        <Button
            android:id="@+id/btnLoginS"
            style="@style/button_style_login_signup"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegS"
            style="@style/button_style_login_signup"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_btn_bg"
            android:text="@string/Register" />

    </LinearLayout>

</LinearLayout>