<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/round_corner_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/msg_camera_alert"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txtFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/media_library"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txtFromCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/camera"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>
