<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <EditText
                android:id="@+id/eTxTopicName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toLeftOf="@+id/imgSend"
                android:background="@drawable/edit_text_bg"
                android:gravity="left|center_vertical"

                android:hint="@string/Topic_Name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:padding="@dimen/dp_10" />

            <EditText
                android:id="@+id/eTxtTopicDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_toLeftOf="@+id/imgSend"
                android:background="@drawable/edit_text_bg"
                android:gravity="top|left"
                android:hint="@string/Enter_Topic_Description"
                android:imeOptions="actionDone"
                android:minLines="6"
                android:padding="@dimen/dp_10" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSubmitTopic"
        style="@style/button_style_login_signup"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/login_btn_bg"
        android:text="@string/submit"


        />
</LinearLayout>
